Updated jwt logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# PostgreSQL datasource properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/springsecuritydb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
