Updtaed jwt implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+token.signing.key=a@BCD234SDBC334
+
 # PostgreSQL datasource properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/springsecuritydb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=spring
+spring.datasource.password=spring
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
